--- a/styles/style.scss
+++ b/styles/style.scss
@@ -184,7 +184,7 @@ body {
             }
           }
           .imagePromo {
-            background: url("../../items/images/IMG_3125.png");
+            background: url("../../items/images/3125.png");
             background-size: cover;
             width: 325px;
             height: 185px;
@@ -198,7 +198,7 @@ body {
             .block {
               margin-bottom: 25px;
               .image {
-                background: url("../../items/images/IMG_3125.png");
+                background: url("../../items/images/3125.png");
                 background-size: cover;
                 width: 325px;
                 height: 185px;
