--- a/styles/style.scss
+++ b/styles/style.scss
@@ -86,7 +86,7 @@ body {
       text-transform: uppercase;
     }
 
-    .description {
+    p.description {
       font-family: "CoFo_Sans-Regular";
       font-size: 16px;
       width: 325px;
