--- a/styles/style.scss
+++ b/styles/style.scss
@@ -250,6 +250,8 @@ body {
                 line-height: 133%;
                 margin-bottom: 25px;
                 text-transform: none;
+                word-break: break-word;
+                hyphens: auto;
 
                 p {
                   text-transform: uppercase;
