--- a/styles/style.scss
+++ b/styles/style.scss
@@ -210,7 +210,7 @@ body {
               &.closed {
                 display: none;
               }
-              width: 325px;
+              /* width: 325px; */
               padding: 25px;
               /* height: 100px; */
               -webkit-box-shadow: 0px 3px 20px -10px rgb(33 30 30 / 51%);
