--- a/styles/style.scss
+++ b/styles/style.scss
@@ -68,6 +68,20 @@ body {
       height: 50px;
       color: grey;
     }
+    .credits {
+      font-family: "CoFo_Sans-Regular";
+      font-size: 14px;
+      color: #9d9595;
+      text-decoration: none;
+      margin-top: 60px;
+      text-align: center;
+      position: relative;
+      margin: 0 auto;
+      bottom: -5vh;
+      a {
+        color: #9d9595;
+      }
+    }
   }
 }
 @media (max-width: 767px) {
@@ -108,7 +122,7 @@ body {
         margin-bottom: 50px;
         text-align: center;
         a {
-          color: #211e1e;
+          color: #9d9595;
         }
       }
 
