--- a/styles/style.scss
+++ b/styles/style.scss
@@ -127,7 +127,6 @@ body {
       }
 
       .firstBlock {
-        width: 325px;
         margin: 0 auto;
         margin-top: 50px;
         margin-bottom: 50px;
@@ -137,6 +136,8 @@ body {
 
         .cover {
           height: 560px;
+          margin: 0 auto;
+          width: 325px;
           .coverImage {
             background: url("../../items/images/back.png");
             background-size: contain;
@@ -191,6 +192,7 @@ body {
             flex-direction: row;
             justify-content: space-between;
             width: 325px;
+            margin: 0 auto;
 
             .leftBlock {
               width: 45%;
@@ -205,10 +207,11 @@ body {
             width: 325px;
             height: 185px;
             margin-bottom: 25px;
+            margin: 0 auto;
           }
           .afisha {
             position: relative;
-            left: -25px;
+            margin: 0 auto;
             top: 25px;
 
             .block {
