--- a/styles/style.scss
+++ b/styles/style.scss
@@ -66,7 +66,7 @@ body {
     .qr {
       width: 50px;
       height: 50px;
-      color: grey;
+      background: url("http://qrcoder.ru/code/?http%3A%2F%2Fnoonegesture.show%2F&8&0");
     }
     .credits {
       font-family: "CoFo_Sans-Regular";
