--- a/styles/style.scss
+++ b/styles/style.scss
@@ -64,9 +64,14 @@ body {
       text-align: center;
     }
     .qr {
-      width: 50px;
-      height: 50px;
       background: url("http://qrcoder.ru/code/?http%3A%2F%2Fnoonegesture.show%2F&8&0");
+      width: 125px;
+      height: 125px;
+      position: absolute;
+      background-size: cover;
+      mix-blend-mode: multiply;
+      top: 30vh;
+      left: 70vw;
     }
     .credits {
       font-family: "CoFo_Sans-Regular";
