--- a/styles/style.scss
+++ b/styles/style.scss
@@ -118,6 +118,7 @@ body {
       width: 375px;
       overflow-x: hidden !important;
       display: block;
+      margin: 0 auto;
 
       .credits {
         font-family: "CoFo_Sans-Regular";
