--- a/styles/style.scss
+++ b/styles/style.scss
@@ -294,7 +294,7 @@ height: 185px; */
               }
             }
             .image {
-              background: url("../../items/images/000013250021.jpg");
+              background: url("../../items/images/nalevo.jpg");
               background-size: cover;
               width: 325px;
               height: 185px;
@@ -304,7 +304,7 @@ height: 185px; */
 
           .budem {
             .image {
-              background: url("../../items/images/000013240004.jpg");
+              background: url("../../items/images/budem.jpg");
               background-size: cover;
               width: 325px;
               height: 185px;
@@ -313,7 +313,7 @@ height: 185px; */
           }
           .sud {
             .image {
-              background: url("../../items/images/000013250027.jpg");
+              background: url("../../items/images/sud.jpg");
               background-size: cover;
               width: 325px;
               height: 185px;
